# fluid-transcription

./: .gitignore  Package.resolved  Package.swift  README.md  fluidaudio.lock.json  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml  test.yml
Sources/FluidTranscriptionCLI/: AppCore.swift  Engine.swift  InputPreparation.swift  main.swift
docs/: index.md
docs/architecture/: processing-flow.md  system-overview.md
docs/development/: local-development.md  publishing-docs.md  release-process.md
docs/getting-started/: installation.md  overview.md  quickstart.md
docs/usage/: artifact-examples.md  cli-overview.md  commands.md  input-preparation.md  output-artifacts.md
scripts/: render-homebrew-formula.sh  stage_bundled_fluidaudio.py
src/fluid_transcription/: __init__.py  __main__.py  adapter.py  cli.py  errors.py  merge.py  models.py  normalize.py  utils.py  validate.py
src/fluid_transcription/bundled/fluidaudio/: manifest.json
tests/: test_adapter.py  test_merge.py  test_validate.py
